// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`javascript_third_parties_new_relic datatype_in_interaction_set_attribute 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_new_relic",
      "line_number": 7,
      "full_filename": "/tmp/bearer-scan/datatype_in_interaction_set_attribute.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "e354099e-b80c-47b5-a86c-8d936b520387",
        "name": "Interactions"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 34,
          "end": 48
        }
      },
      "sink": {
        "start": 5,
        "end": 7,
        "column": {
          "start": 3,
          "end": 49
        },
        "content": "newrelic.interaction()\\n    .setAttribute(\\"username\\", user.first_name)\\n    .setAttribute(\\"postal-code\\", user.post_code)"
      },
      "parent_line_number": 5,
      "snippet": "newrelic.interaction()\\n    .setAttribute(\\"username\\", user.first_name)\\n    .setAttribute(\\"postal-code\\", user.post_code)",
      "fingerprint": "63161101404765527f0dada7fd00b64e_0",
      "old_fingerprint": "d4a33ef10c96118848e50cbe6babe62c_0"
    },
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_new_relic",
      "line_number": 13,
      "full_filename": "/tmp/bearer-scan/datatype_in_interaction_set_attribute.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 13,
        "end": 13,
        "column": {
          "start": 35,
          "end": 53
        }
      },
      "sink": {
        "start": 13,
        "end": 13,
        "column": {
          "start": 1,
          "end": 54
        },
        "content": "interaction.setAttribute(\\"email\\", user.email_address)"
      },
      "parent_line_number": 13,
      "snippet": "interaction.setAttribute(\\"email\\", user.email_address)",
      "fingerprint": "63161101404765527f0dada7fd00b64e_1",
      "old_fingerprint": "d4a33ef10c96118848e50cbe6babe62c_1"
    }
  ]
}"
`;

exports[`javascript_third_parties_new_relic datatype_in_notice_error 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_new_relic",
      "line_number": 7,
      "full_filename": "/tmp/bearer-scan/datatype_in_notice_error.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "b5a3b0fd-dd5c-420d-91ce-dd2dddc8cc38",
        "name": "IP address"
      },
      "category_groups": [
        "Personal Data"
      ],
      "source": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 31,
          "end": 50
        }
      },
      "sink": {
        "start": 7,
        "end": 7,
        "column": {
          "start": 5,
          "end": 51
        },
        "content": "newrelic.noticeError(err, customer.ip_address)"
      },
      "parent_line_number": 7,
      "snippet": "newrelic.noticeError(err, customer.ip_address)",
      "fingerprint": "63161101404765527f0dada7fd00b64e_0",
      "old_fingerprint": "cf5937bc41ef8e6cf874e0326f3da03e_0"
    }
  ]
}"
`;

exports[`javascript_third_parties_new_relic datatype_in_set_custom_attribute 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_new_relic",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_set_custom_attribute.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "cef587dd-76db-430b-9e18-7b031e1a193b",
        "name": "Email Address"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 40,
          "end": 54
        }
      },
      "sink": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 1,
          "end": 55
        },
        "content": "newrelic.setCustomAttribute(\\"user-id\\", customer.email)"
      },
      "parent_line_number": 3,
      "snippet": "newrelic.setCustomAttribute(\\"user-id\\", customer.email)",
      "fingerprint": "63161101404765527f0dada7fd00b64e_0",
      "old_fingerprint": "04e609e85c5a7c6ca13e1b88df45e81f_0"
    }
  ]
}"
`;

exports[`javascript_third_parties_new_relic datatype_in_set_page_view_name 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "javascript_third_parties_new_relic",
      "title": "Sensitive data sent to New Relic detected.",
      "description": "## Description\\nLeaking sensitive data to third-party loggers is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to New Relic.\\n\\n## Remediations\\n\\nWhen logging errors or events, ensure all sensitive data is removed.\\n\\n## Resources\\n- [New Relic Docs](https://docs.newrelic.com/)\\n- [Log obfuscation](https://docs.newrelic.com/docs/logs/ui-data/obfuscation-ui/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_third_parties_new_relic",
      "line_number": 3,
      "full_filename": "/tmp/bearer-scan/datatype_in_set_page_view_name.js",
      "filename": ".",
      "data_type": {
        "category_uuid": "7a794bd6-a6d1-429d-91a2-377acce9e9db",
        "name": "Bank Account"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 26,
          "end": 54
        }
      },
      "sink": {
        "start": 3,
        "end": 3,
        "column": {
          "start": 1,
          "end": 64
        },
        "content": "newrelic.setPageViewName(customer.bank_account_number, \\"$host\\")"
      },
      "parent_line_number": 3,
      "snippet": "newrelic.setPageViewName(customer.bank_account_number, \\"$host\\")",
      "fingerprint": "63161101404765527f0dada7fd00b64e_0",
      "old_fingerprint": "16039f64b7a3f77ef2f016652ce21d1f_0"
    }
  ]
}"
`;

exports[`javascript_third_parties_new_relic ok_ignored_datatypes_only 1`] = `"{}"`;

exports[`javascript_third_parties_new_relic ok_no_datatypes 1`] = `"{}"`;
